# STM32-smart-heating

./: .cproject  .gdbinit  .gitignore  .project  Makefile  README.md  STM32F107XC_FLASH.ld  gdb_cmds.txt  generic_eval Debug.launch  generic_eval_debug.launch  notes.txt  stm3210c_eval.cfg
common/: connection_protocol.txt  data_exchange_protocol.txt  notes.odt
docs/: button_8cpp_source.html  button_8hpp.html  callbacks_8hpp_source.html  classButton-members.html  classButton__inherit__graph.md5  classClkFrame-members.html  classClkFrame.html  classEEPROM-members.html  classEEPROM.html  classIHideableWindow.html  classIMinCallback-members.html  classIMinCallback.html  classIMinCallback__inherit__graph.md5  classISecCallback.html  classISecCallback__inherit__graph.md5  classIStaticWindow-members.html  classIStaticWindow.html  classIntervalFrame.html  classIntervalFrame__inherit__graph.md5  classMainFrame-members.html  classMainFrame__inherit__graph.md5  classOverviewIntervalFrame-members.html  classOverviewIntervalFrame__inherit__graph.md5  classRTCController-members.html  classRelay.html  classSetIntervalFrame-members.html  classSetIntervalFrame.html  classStaticMeasureTempWindow-members.html  classStaticMeasureTempWindow.html  classStaticMeasureTempWindow__inherit__graph.md5  classStaticPresetTempWindow-members.html  classStaticTempWindow-members.html  classStaticTimeWindow__inherit__graph.md5  classTempWindow-members.html  classTempWindow.html  classTimeWindow__inherit__graph.md5  classWindow.html  classWindowSystem-members.html  classWindowSystem.html  clk__frame_8hpp.html  (+81 more)
hardware/: stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.cpp  stm32f1xx_it.hpp  syscalls.c
inc/: button.hpp  buttons.hpp  callbacks.hpp  clk_frame.hpp  clk_window.hpp  clkframe.hpp  control_window.hpp  eeprom.hpp  frame.hpp  hideable_window.hpp  input.hpp  interface_hideable_window.hpp  interval_frame.hpp  interval_frame_data.hpp  interval_window.hpp  intervalframe.hpp  intervalframe_data.hpp  io.hpp  lcd.hpp  lwipopts.h  main.hpp  main_frame.hpp  mainframe.hpp  one_wire.hpp  overview_interval_frame.hpp  relay.hpp  rtc.hpp  rtc_controller.hpp  set_interval_frame.hpp  static_measure_temp_window.hpp  static_preset_temp_window.hpp  static_temp_window.hpp  static_time_window.hpp  stats.hpp  temp_controller.hpp  temp_sensor.hpp  temp_window.hpp  time.hpp  time_window.hpp  window.hpp  (+1 more)
proj/cmake/: CMakeLists.txt  config.bat  config.cmake  toolchain.cmake
src/: button.cpp  buttons.cpp  callbacks.cpp  clk_frame.cpp  clk_window.cpp  clkframe.cpp  control_window.cpp  (+30 more)
src/communication/: CMakeLists.txt  char_stream.cpp  char_stream.hpp  client.cpp  client.hpp  client_error_timer.cpp  client_error_timer.hpp  client_receive_timeout_timer.cpp  client_receive_timeout_timer.hpp  client_timer.cpp  client_timer.hpp  communication_device.cpp  communication_device.hpp  des.cpp  des.hpp  i_client_cb_recver.hpp  interval.cpp  interval.hpp  interval_list.cpp  interval_list.hpp  tcp_driver.cpp  tcp_driver.hpp
src/communication/http/: body.hpp  header.cpp  header.hpp  header_option.cpp  header_option.hpp  request.cpp  request.hpp  response.cpp  response.hpp  response_buffer.cpp  response_buffer.hpp
src/cube/: CMakeLists.txt
src/cube/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
src/cube/Middlewares/ST/STM32_Cryptographic/Inc/: crypto.h
src/cube/STM32F1xx_HAL_Driver/: STM32F107xC_User_Manual.chw
src/cube/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_rcc.h  stm32f1xx_hal_rtc.h
src/cube/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_rtc.c
src/cube/cube-mx/: .mxproject  Makefile  generic_eval.ioc
src/cube/cube-mx/Inc/: cube_main.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/cube/cube-mx/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
src/cube/hardware/: stm32f1xx_hal_msp.c  stm32f1xx_it.cpp
src/main/: CMakeLists.txt
src/main/gui/: window_system.cpp  window_system.hpp
src/main/gui/frames/: clk_frame.cpp  clk_frame.hpp  connect_frame.cpp  connect_frame.hpp  frame.cpp  frame.hpp  interval_frame.cpp  interval_frame.hpp  key_frame.cpp  key_frame.hpp  main_frame.cpp  main_frame.hpp  overview_interval_frame.cpp  overview_interval_frame.hpp  set_interval_frame.cpp  set_interval_frame.hpp
src/main/gui/windows/: button.cpp  button.hpp  control_window.cpp  control_window.hpp  hex_char_window.cpp  hex_char_window.hpp  static_measure_temp_window.cpp  static_preset_temp_window.cpp  static_temp_window.cpp  static_time_window.cpp  temp_window.cpp  temp_window.hpp  text_window.cpp  text_window.hpp  time_window.cpp  time_window.hpp  window.cpp  window.hpp
src/main/hardware/: eeprom.cpp  eeprom.hpp  io.cpp  io.hpp  lcd.cpp  lcd.hpp  one_wire.cpp  one_wire.hpp  relay.cpp  relay.hpp
src/main/impl/: button.cpp  button.hpp  clk_frame.cpp  clk_frame.hpp  eeprom.cpp  frame.hpp  hideable_window.hpp  interval_frame.cpp  interval_frame_data.cpp  io.cpp  lcd.cpp  main.cpp  main.hpp  main_frame.cpp  one_wire.cpp  one_wire.hpp  relay.hpp  rtc_controller.cpp  rtc_controller.hpp  static_measure_temp_window.cpp  static_temp_window.cpp  static_temp_window.hpp  static_time_window.cpp  static_time_window.hpp  static_window.hpp  syscalls.c  temp_sensor.hpp  temp_window.cpp  temp_window.hpp  time.hpp  window_system.cpp
src/main/lwip_conf/: ethernetif.h  lwipopts.h
src/main/main/: application.cpp  application.hpp  callback_receivers.hpp  callbacks.hpp  communication_error_event.hpp  connected_event.hpp  des_key.cpp  des_key.hpp  eth_link_up_event.hpp  event.hpp  input.hpp  interval.cpp  interval_frame_data.cpp  interval_frame_data.hpp  interval_list.cpp  interval_list.hpp  intervals_changed_event.cpp  intervals_changed_event.hpp  intervals_changed_server_event.hpp  intervals_changed_stm_event.hpp  key_set_event.hpp  main.cpp  main.hpp  measured_temp_event.hpp  rt_assert.h  rtc_controller.cpp  rtc_controller.hpp  settings.h  settings.hpp  sprintf_double.hpp  sw_timer_owner.cpp  sw_timer_owner.hpp  temp_controller.cpp  temp_controller.hpp  temp_sensor.cpp  time.cpp  time.hpp  timer_events.cpp  timer_events.h
(+212 files in other folders)
